=== HEAD

* Recognize identity type in the schema dumper (jeremyevans) (#468)

* Fix possible thread safety issues in creating Database objects and anonymous model classes (jeremyevans)

* Don't assign instance variables to Java objects, for future JRuby 2.0 support (jeremyevans) (#466)

* Use date and timestamp formats that are multilanguage and not DATEFORMAT dependent on Microsoft SQL Server (jeremyevans)

* Add Database#log_exception, which logs when a query raises an exception, for easier overriding (jeremyevans) (#465)

* Make the migrators only use transactions by default if the database supports transactional DDL (jeremyevans)

* Add Database#supports_transactional_ddl? for checking if DDL statements can be rolled back in transactions (jeremyevans)

* Don't use auto parameterization when using cursors in the pg_auto_parameterize extension (jeremyevans) (#463)

* No longer escape backslashes in strings by default, fixes doubled backslashes on some adapters (jeremyevans)

* Escape blackslash-carriage return-line feed in strings on Microsoft SQL Server (mluu, jeremyevans) (#462, #461)

* Remove Array#all_two_pairs? (jeremyevans)

* Remove Dataset#disable_insert_returning on PostgreSQL (jeremyevans)

* Remove support for PostgreSQL <8.2 (jeremyevans)

* Remove support for Ruby <1.8.7 (jeremyevans)

=== 3.34.1 (2012-04-02)

* Fix bug in optimization of primary key lookup (jeremyevans) (#460)

=== 3.34.0 (2012-04-02)

* Fix connection failures when connecting to PostgreSQL with newer versions of swift (jeremyevans)

* Fix using a bound variable for a limit in the ibmdb adapter on ruby 1.9 (jeremyevans)

* primary_key :column, :type=>Bignum now works correctly on H2 (jeremyevans)

* Add query_literals extension for treating regular strings like literal strings in select, group, and order methods (jeremyevans)

* Actually use RETURNING for deletes/updates on PostgreSQL 8.2-9.0 (jeremyevans)
