@@ -1,5 +1,7 @@
 === HEAD
 
+* Correctly handle errors that occur when rolling back transactions (jeremyevans)
+
 * Recognize identity type in the schema dumper (jeremyevans) (#468)
 
 * Fix possible thread safety issues in creating Database objects and anonymous model classes (jeremyevans)
